log
Thu 21 Mar 2024 08:12:21 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1b75ee5
Thu 21 Mar 2024 08:14:22 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:11: error: comparison between pointer and integer [-Werror]
   48 |   while(i <= 10)
      |           ^~
exercises.c:52:14: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   52 |     *numeros = i;
      |              ^
exercises.c:48:11: error: ‘i’ is used uninitialized [-Werror=uninitialized]
   48 |   while(i <= 10)
      |         ~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
ea711fa
